customized divs using flexbox in css

--- a/206-divs-flexbox-starter/index.html
+++ b/206-divs-flexbox-starter/index.html
@@ -25,13 +25,17 @@
 
     <section class="wrapper">
         <div class="div-1">
-            Div 1
+            <p>I am a Quality Assurance Analyst who loves to improve the user experience and quality of
+                websites and applications. When I'm not working or pursuing side gigs, I can be found traveling,
+                exploring nature or enjoying quality family time.</p>
         </div>
         <div class="div-2">
-            Div 2
+            <p>I was born and raised in Boston, MA. I love the small city feeling and all that it has to offer. The food,
+                nightlife, local shops, and awesome neighborhoods.</p>
         </div>
         <div class="div-3">
-            Div 3
+            <p>Some of my goals are to travel more, meet new people, improve my coding skills, and learn about different
+            cultures. I can't wait to see all the new adventures that will come my way!</p>
         </div>
     </section>
 
@@ -43,8 +47,8 @@
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
             (function (b, o, i, l, e, r) {
-            b.GoogleAnalyticsObject = l; b[l] || (b[l] =
-                function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
+                b.GoogleAnalyticsObject = l; b[l] || (b[l] =
+                    function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
                 e = o.createElement(i); r = o.getElementsByTagName(i)[0];
                 e.src = 'https://www.google-analytics.com/analytics.js';
                 r.parentNode.insertBefore(e, r)
