customize content within page

--- a/206-divs-flexbox-starter/index.html
+++ b/206-divs-flexbox-starter/index.html
@@ -22,22 +22,35 @@
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+    
 
     <section class="wrapper">
+        <header>
+            Hi. I'm Jessica.
+        </header>
+        <main>
+            Explorer, traveler, life learner of all things.
+        </main>
         <div class="div-1">
             <p>I am a Quality Assurance Analyst who loves to improve the user experience and quality of
                 websites and applications. When I'm not working or pursuing side gigs, I can be found traveling,
                 exploring nature or enjoying quality family time.</p>
         </div>
         <div class="div-2">
-            <p>I was born and raised in Boston, MA. I love the small city feeling and all that it has to offer. The food,
+            <p>I was born and raised in Boston, MA. I love the small city feeling and all that it has to offer. The
+                food,
                 nightlife, local shops, and awesome neighborhoods.</p>
         </div>
         <div class="div-3">
             <p>Some of my goals are to travel more, meet new people, improve my coding skills, and learn about different
-            cultures. I can't wait to see all the new adventures that will come my way!</p>
+                cultures. I can't wait to see all the new adventures that will come my way!</p>
         </div>
+        <footer>
+            Copyright 2020
+        </footer>
     </section>
+
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
